--- a/Ejercicio6_1/MainWindow.xaml
+++ b/Ejercicio6_1/MainWindow.xaml
@@ -17,7 +17,7 @@
 
             <!-- BOTONES -->
             <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <Button x:Name="Ca" />
+                <Button x:Name="CalcularButton" Content="Calcular" Click="CalcularButton_Click" />
             </StackPanel>
 
         </StackPanel>
